PC-8341: second bug firefox price placeholder cropped in stock page

--- a/src/components/pages/Offers/Offer/Stocks/StockItemOptionsMenu/StockItemOptionsMenu.scss
+++ b/src/components/pages/Offers/Offer/Stocks/StockItemOptionsMenu/StockItemOptionsMenu.scss
@@ -5,7 +5,6 @@
     background-color: transparent;
     border: none;
     display: flex;
-    padding: rem(8px) rem(10px);
 
     .stock-options-menu-button-icon {
       height: rem(24px);
